# secretary_agent

./: .gitignore  README.md  main.py  pyproject.toml
agent/: se_agent.py
data/: chat_threads.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx  PersonalSecretaryDashboard.tsx  api.ts  index.css  mockData.ts  types.ts
frontend/src/dashboard/: types.ts  ui.tsx
frontend/src/dashboard/regions/: LifePanel.tsx  SettingsPanel.tsx  SidebarNav.tsx  StudyPanel.tsx  TodayPlanPanel.tsx
knowledge/: agent-rag-guide.md  course-schedule-import-guide.md
se_mcp/: cli_mcp.py  frontend_mcp.py  rag_mcp.py  terminal_mcp.py  time_mcp.py
se_model/: llm.py  llm_config.py
se_prompts/: system_prompts.py
se_tools/: cli_tools.py  frontend_tools.py  rag_tools.py  terminal_tools.py  time_tools.py
test/: houduan.py  qianduan.py
utils/: frontend_regions.py  llm_audit_store.py  logger.py  mcp.py  model_config_store.py  thread_store.py  time_utils.py
utils/memoryos/: __init__.py  long_term.py  memoryos.py  mid_term.py  profile_schema.py  retriever.py  short_term.py  updater.py  utils.py
